--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,24 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 Werkzeug==1.0.1
+python-dotenv
 Flask-MySQL
+#https://python.plainenglish.io/some-useful-python-flask-plugins-3ac57faaca7e
+Flask-SQLAlchemy
+Flask-WTF
+Flask-Uploads
+Flask-Debugtoolbar
+Flask-Login
+Flask-Admin
+Flask-Cors
+Flask-Migrate
+peewee
+wtf-peewee
+flask-peewee
+#https://nickjanetakis.com/blog/15-useful-flask-extensions-and-libraries-that-i-use-in-every-project
+alembic
+#https://gitee.com/labike/awesome-flask
+Flask-Restless
+Flask-User
+Flask-SuperAdmin
+Flask-Alembic
